--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@libsql/client": "^0.8.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "7.4.2",
     "@prisma/adapter-libsql": "^5.19.1",
     "@prisma/client": "^5.19.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
